--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -18,7 +18,8 @@ body{
 .row{
     padding: 0;
 }
-.container{
+
+.container-main{
     background-color: white;
     min-height: 100%;
     padding: 0;
