--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -57,3 +57,8 @@ h1, h2, h3, h4, h5, h6{
 .btn-primary:hover{
     background-color: lighten($p-color, 5%);
 }
+
+
+.carousel-caption {
+    background: rgba(0, 0, 0, 0.5);
+}
