--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -62,3 +62,18 @@ h1, h2, h3, h4, h5, h6{
 .carousel-caption {
     background: rgba(0, 0, 0, 0.5);
 }
+
+
+.img-wrapper {
+    position: relative;
+    padding-bottom: 100%;
+    overflow: hidden;
+    width: 100%;
+  }
+  .img-wrapper img {
+    position: absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+  }
