--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -99,3 +99,14 @@ h1, h2, h3, h4, h5, h6{
     width:100%;
     height:100%;
   }
+
+
+  img {
+    @extend .img-fluid
+  }
+
+  .fb-page, 
+.fb-page span, 
+.fb-page span iframe[style] { 
+    width: 100% !important; 
+}
